# gtimes

./: CHANGELOG.md  README.md  pyproject.toml  validation_results.json
.github/workflows/: basic-ci.yml  ci-minimal.yml  ci.yml  ci.yml.disabled  publish.yml
.github/workflows.disabled/: ci.yml.disabled  quality-checks.yml.disabled
docs/: GPS_CONCEPTS.md
scripts/: deploy_to_pypi.py
src/gtimes/: __init__.py  gpstime.py  timecalc.py  timefunc.py
src/tests/: test_parse_datetime_flexible.py
tests/: __init__.py  conftest.py  test_timefunc.py  test_timefunc_comprehensive.py  validate_leap_seconds.py
